--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ pytest-astropy
 pytest-cov
 flake8 
 black
-swxsoc @ git+https://github.com/dbarrous/swxsoc.git@grafana-annotation-api
+swxsoc @ git+https://github.com/swxsoc/swxsoc.git
 pandas==2.2.3
