--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ flake8
 black
 swxsoc @ git+https://github.com/swxsoc/swxsoc.git
 pandas==2.2.3
+padre_craft @ git+https://github.com/padreSat/padre_craft.git
