Update requirements to use latest pandas version and add padre_craft

--- a/lambda_function/requirements.txt
+++ b/lambda_function/requirements.txt
@@ -1,3 +1,4 @@
 swxsoc @ git+https://github.com/swxsoc/swxsoc.git
-pandas==2.2.3
+pandas
 stixdcpy
+padre_craft @ git+https://github.com/padreSat/padre_craft.git
