--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ pytest-astropy
 pytest-cov
 flake8 
 black
-swxsoc @ git+https://github.com/swxsoc/swxsoc.git
-pandas==2.2.3
+pandas
 stixdcpy
 padre_craft @ git+https://github.com/padreSat/padre_craft.git
